<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Chez Gusteau</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="bienvenue">Welcome to Chez Gusteau</string>
    <string name="description" translatable="false">Chez Gusteau n\'a pas toujours été un restaurant, ce qui explique son décor atypique et exceptionnel. Le pavillon était à l\'origine un lieu de halte pour Napoléon III, qui venait au Bois de Boulogne pour chasser. Au fil des années, Chez Gusteau a évolué, tout en entretenant son style "rétro-moderne". A l\'intérieur, dorures, chandeliers et miroirs offrent un charme certain à cette résidence qui a conservé toute sa splendeur d\'époque. La salle, lumineuse et spacieuse, la formidable hauteur sous plafond ainsi que l\'espacement des tables, font de Chez Gusteau un lieu propice à la détente et aux confidences. Voici donc un lieu parfait pour un déjeuner d\'affaires ou un dîner romantique aux chandelles. Quant aux différents salons situés à l\'étage, ils sont privatisables dans le cadre d\'un séminaire d\'entreprise ou d\'un évènement privé. Chez Gusteau dispose maintenant aussi d\'une nouvelle application interactive au service de ses clients.</string>
    <string name="accueil">Home</string>

    <string name="menus">Menus</string>

    <string name="menuA" translatable="false">\n Menu Printanier \n15€\n</string>
    <string name="menuAshort" translatable="false">Menu Printanier     15€</string>
    <string name="menuB" translatable="false">\nMenu Campagnard \n 22€\n</string>
    <string name="menuBshort" translatable="false">Menu Campagnard    22€</string>
    <string name="menuC" translatable="false">\nMenu Gourmand \n 25€\n</string>
    <string name="menuCshort" translatable="false">Menu Gourmand    25€</string>
    <string name="menuD" translatable="false">\nMenu Gourmet \n 35€\n</string>
    <string name="menuDshort" translatable="false">Menu Gourmet     35€</string>
    <string name="carte">Carte</string>
    <string name="validation">Send the order</string>
    <string name="enter">Enter</string>
    <string name="popServeur">Call waiter</string>

    <string name="carteEntrees">\nStarters\n</string>
    <string name="cartePlats">\nMain Courses\n</string>
    <string name="carteDesserts">\nDeserts\n</string>
    <string name="carteBoissons">\nDrinks\n</string>

    <!--Boissons-->
    <string name="boisson_cat_alcool">Spirits</string>

    <string name="boisson_alcool1">Red Martini</string>
    <string name="boisson_alcool1_prix" translatable="false">5€</string>
    <string name="boisson_alcool2" translatable="false">Pastis 51</string>
    <string name="boisson_alcool2_prix" translatable="false">5.5€</string>
    <string name="boisson_alcool3">Johonnie Walker Blue Label (Blended)</string>
    <string name="boisson_alcool3_prix" translatable="false">12.5€</string>

    <string name="boisson_cat_vins">Wine</string>
    <string name="boisson_vin1">St-Chignan 75cl </string>
    <string name="boisson_vin1_prix" translatable="false">10.50€</string>
    <string name="boisson_vin2">Gris de gris 75cl</string>
    <string name="boisson_vin2_prix" translatable="false">6.50€</string>
    <string name="boisson_vin3">St-Emilion 75cl </string>
    <string name="boisson_vin3_prix" translatable="false">18€</string>

    <string name="boisson_cat_soft">Softs</string>
    <string name="boisson_soft1">Coca-cola 33cl</string>
    <string name="boisson_soft1_prix" translatable="false">4€</string>
    <string name="boisson_soft2">Grenadine 50cl</string>
    <string name="boisson_soft2_prix" translatable="false">3.50€</string>
    <string name="boisson_soft3">Fanta 33cl </string>
    <string name="boisson_soft3_prix" translatable="false">4€</string>
    <string name="boisson_soft4">Mineral Water 1L</string>
    <string name="boisson_soft4_prix" translatable="false">6.50€</string>

    <!--Entrees-->
    <string name="entree_cat_salade">Salad</string>
    <string name="entree_salade1">Salade de chèvre chaud</string>
    <string name="entree_salade1_desc">Salade au fromage de chèvre chaud, croutons persil et ail et un filet d\'huile d\'olive.</string>
    <string name="entree_salade1_prix" translatable="false">7€</string>
    <string name="entree_salade2">Salade César</string>
    <string name="entree_salade2_desc">Coeurs de laitue, coupeaux de parmesan, tranches de pain écroutées et sa sauce dont on garde le secret.</string>
    <string name="entree_salade2_prix" translatable="false">6.80€</string>
    <string name="entree_salade3">Salade niçoise</string>
    <string name="entree_salade3_desc">Oeufs, poivrons verts, tomates cerise, échalottes, filets d\'anchois au sel et olives noires de Nice.</string>
    <string name="entree_salade3_prix" translatable="false">6.40€</string>


    <string name="entree_cat_charcuterie">Charcuterie</string>
    <string name="entree_charcuterie1">Jambon de Bayonne</string>
    <string name="entree_charcuterie1_desc">Goutez à notre jambon de Bayonne 100% made in France</string>
    <string name="entree_charcuterie1_prix" translatable="false">8.20€</string>
    <string name="entree_charcuterie2">Rillettes de thon</string>
    <string name="entree_charcuterie2_desc">Nos rillettes de thon sont assaisonnées à l\'ail et aux fines herbes et acompagnées d\'une tuile au romarin. Idéal pour accompagner votre apéro.</string>
    <string name="entree_charcuterie2_prix" translatable="false">6€</string>
    <string name="entree_charcuterie3">Fois gras et coulis de framboise</string>
    <string name="entree_charcuterie3_desc">Le fois gras est fait maison et accompagné de biscuits au raisins et son coulis de framboise</string>
    <string name="entree_charcuterie3_prix" translatable="false">9.40€</string>

    <!--Plats-->
    <string name="plat_cat_viande">Meat</string>
    <string name="plat_viande1">Rôti de veau</string>
    <string name="plat_viande1_prix" translatable="false">14€</string>
    <string name="plat_viande2" translatable="false">Filet de Boeuf Rossini</string>
    <string name="plat_viande2_prix" translatable="false">21.35€</string>
    <string name="plat_viande3" translatable="false">Entrcôte sauce Roquefort</string>
    <string name="plat_viande3_prix" translatable="false">15€</string>

    <string name="plat_cat_poisson">Fish</string>
    <string name="plat_poisson1">Steak de thon</string>
    <string name="plat_poisson1_prix" translatable="false">10.50€</string>
    <string name="plat_poisson2">Aileron de requin</string>
    <string name="plat_poisson2_prix" translatable="false">16€</string>
    <string name="plat_poisson3">Sole meunière</string>
    <string name="plat_poisson3_prix" translatable="false">9.40€</string>

    <string name="plat_cat_pates">Pasta</string>
    <string name="plat_pates1" translatable="false">Tagliatelles au Pesto</string>
    <string name="plat_pates1_prix" translatable="false">11.20€</string>
    <string name="plat_pates2" translatable="false">Spaghettis Carbonara</string>
    <string name="plat_pates2_prix" translatable="false">12€</string>
    <string name="plat_pates3" translatable="false">Pennes au saumon</string>
    <string name="plat_pates3_prix" translatable="false">10.50€</string>

    <!--Dessert-->
    <string name="dessert_cat_glace">Ice Cream</string>
    <string name="dessert_glace1">Sorbet aux fruits</string>
    <string name="dessert_glace1_prix" translatable="false">3€</string>
    <string name="dessert_glace2">Pêche melba</string>
    <string name="dessert_glace2_prix" translatable="false">6.80€</string>
    <string name="dessert_glace3">Chocolat liègeois</string>
    <string name="dessert_glace3_prix" translatable="false">6.40€</string>
    <string name="entree">Starters :</string>
    <string name="askWaiter">Ask the waiter for something</string>
    <string name="boissons">Drinks :</string>
    <string name="plats">Main Courses :</string>
    <string name="desserts">Deserts :</string>
    <string name="text_menus">Menus :</string>
    <string-array name="cuissons">
        <item>Bleue</item>
        <item>Saignante</item>
        <item>A point</item>
    </string-array>
    <string name="cuisson_prompt">--cooking--</string>

    <string name="pickEntree">Pick a starter</string>
    <string name="pickPlat">Pick a main course</string>
    <string name="pickDessert">Pick a desert</string>
    <string name="ou">or</string>
    <string name="addMenu">Add this formula</string>
    <string name="total">Total :</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>