<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dp">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@mipmap/parchemin"
        android:onClick="goToMain"
        android:text="@string/accueil" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:onClick="goToMenus"
        android:background="@mipmap/parchemin"
        android:text="@string/menus" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:onClick="goToCarte"
        android:background="@mipmap/parchemin"
        android:text="@string/carte" />

</LinearLayout>