<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".CarteEntreesActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <include layout="@layout/top_menu_bar"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:text="@string/entree_cat_charcuterie" />

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_charcuterie1"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_charcuterie1"
                        android:contentDescription="@string/entree_charcuterie1"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_charcuterie1"
                        android:text="@string/entree_charcuterie1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_charcuterie2"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_charcuterie2"
                        android:contentDescription="@string/entree_charcuterie2"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_charcuterie2"
                        android:text="@string/entree_charcuterie2_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_charcuterie3"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_charcuterie3"
                        android:contentDescription="@string/entree_charcuterie3"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_charcuterie3"
                        android:text="@string/entree_charcuterie3_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:text="@string/entree_cat_salade" />


                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_salade1"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_salade1"
                        android:contentDescription="@string/entree_salade1"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_salade1"
                        android:text="@string/entree_salade1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_salade2"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_salade2"
                        android:contentDescription="@string/entree_salade2"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_salade2"
                        android:text="@string/entree_salade2_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/entree_salade3"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_salade3"
                        android:contentDescription="@string/entree_salade3"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_salade3"
                        android:text="@string/entree_salade3_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/right_side_bar"/>

</LinearLayout>