<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".CarteBoissonsActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <include layout="@layout/top_menu_bar"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:text="@string/boisson_cat_alcool" />

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_alcool1"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_alcool1"
                        android:contentDescription="@string/boisson_alcool1"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_alcool1"
                        android:text="@string/boisson_alcool1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_alcool2"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_alcool2"
                        android:contentDescription="@string/boisson_alcool2"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_alcool2"
                        android:text="@string/boisson_alcool2_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_alcool3"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_alcool3"
                        android:contentDescription="@string/boisson_alcool3"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_alcool3"
                        android:text="@string/boisson_alcool1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:text="@string/boisson_cat_vins" />


                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_vin1"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_vin1"
                        android:contentDescription="@string/boisson_vin1"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_vin1"
                        android:text="@string/boisson_vin1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_vin2"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_vin2"
                        android:contentDescription="@string/boisson_vin2"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_vin2"
                        android:text="@string/boisson_vin2_prix"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"

                        android:text="@string/boisson_vin3"
                        android:layout_centerVertical="true" />
                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_vin3"
                        android:contentDescription="@string/boisson_vin3"
                        android:layout_alignParentRight="true"
                        android:background="@android:drawable/ic_input_add"
                        android:layout_centerVertical="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_toLeftOf="@id/button_vin3"
                        android:text="@string/boisson_vin1_prix"
                        android:layout_centerVertical="true" />



                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/right_side_bar"/>

</LinearLayout>